[package]
name = "w3-net-portal"
version = "0.0.0-dev"
edition = "2024"

[lib]
name = "w3_net_portal"
path = "src/lib.rs"

[[bin]]
name = "w3-net-portal-cli"
path = "src/bin/w3-net-portal-cli.rs"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4", features = ["derive"] }
pnet = "0.35"
